feat(backend): add Phase 3 registration service, controller, i18n, and transaction DAO
Phase 3 of Feature 003 — User Registration with BCrypt, email uniqueness, JDBC transaction, and bilingual i18n messages.

Change summary:
- Add PasswordService with BCrypt hashing (cost=12) and password strength validation
- Add AuthService with email uniqueness check, atomic User+ContactDetail JDBC transaction, and ServiceException with error codes
- Add AuthController (POST /api/auth/register) with @Valid, session auto-login, and proper HTTP status codes (409/400)
- Add DAO connection-accepting overloads (UserDao.create, ContactDetailDao.create) for transaction support
- Add i18n: messages.properties and messages_ru.properties with 11 auth message keys each
- Add json-path test dependency to pom.xml for MockMvc jsonPath assertions
- Add 44 passing tests across all layers (PasswordService, AuthService, AuthController, UserDao)
- Add educational dev-docs/learnings.md covering Service, Controller, Exception layer patterns
- Capture durable memory entries (DECISIONS D9, D10; BUGS B7, B8; WORKLOG W4, W5)

Rationale:
- Registration is the first real user-facing backend feature — establishes service/controller/exception patterns
- Transaction support in DAO layer enables atomic user creation with contact details
- i18n prepared from the start for bilingual (EN/RU) UI requirement
- Password strength validation prevents weak passwords at registration time
- ServiceException with error codes enables clean frontend error display without leaking internals

Next step:
Proceed to Phase 4 — Login with rate limiting (POST /api/auth/login, rate-limit filter, session management).